[gd_scene load_steps=14 format=3 uid="uid://qiuq30xej6xo"]

[ext_resource type="Script" path="res://scn/public/gold/gold.gd" id="1_uny5y"]
[ext_resource type="Texture2D" uid="uid://cl5qp4swksffi" path="res://source/img/coin_gold.png" id="2_p7co4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sas6r"]
atlas = ExtResource("2_p7co4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv0uv"]
atlas = ExtResource("2_p7co4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxron"]
atlas = ExtResource("2_p7co4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qor5"]
atlas = ExtResource("2_p7co4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqwes"]
atlas = ExtResource("2_p7co4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcbnw"]
atlas = ExtResource("2_p7co4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbxfl"]
atlas = ExtResource("2_p7co4")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1of1"]
atlas = ExtResource("2_p7co4")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3te68"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sas6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv0uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxron")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qor5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqwes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcbnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbxfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1of1")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vn2h"]
size = Vector2(660, 310)

[sub_resource type="CircleShape2D" id="CircleShape2D_si14c"]

[node name="Gold" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 64
collision_mask = 0
script = ExtResource("1_uny5y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3te68")
autoplay = "default"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
avoidance_enabled = true
radius = 0.01
max_speed = 200.0

[node name="Area" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2(-2, -4)
shape = SubResource("RectangleShape2D_3vn2h")

[node name="disapper" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_si14c")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="timeout" from="disapper" to="." method="_on_disapper_timeout"]
